and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 27, 2014 T.Nikitina              geom-usolids-V10-00-25
- Improved dump in StreamInfo() for UMultiUnion.

November 27, 2014 G.Cosmo                 geom-usolids-V10-00-24
- Removed 'inline' specification for pure virtual function StreamInfo()
  in VUSolid base class.

November 10, 2014 T.Nikitina              geom-usolids-V10-00-23
- UPolyhedra: moved Extent() from protected to public.
- UPolycone: correction in Capacity() for iteration over the number of
  sections and in SurfaceArea() for the case opening-angle is less than 2*pi.
- UTet: fixed approximation in Extent().

November 6, 2014  T.Nikitina              geom-usolids-V10-00-22
- Minor fixes of errors reported by Coverity and unit tests in 
  UTubs,UCons, UTrap, UTet, UTriangular/QuadrangularFacet.
- Fixed algorithm for Extent() in UTrap.

October 30, 2014  B.Morgan                geom-usolids-V10-00-21
- Updated CMakeLists.txt to ensure library is built/installed
  in global mode.

October 29, 2014  G.Cosmo                 geom-usolids-V10-00-20
- Moved module from source/geometry/solids to source/externals.
  Adapted scripts for optional external USolids library build.
- Moved G4USolid bridge class to geometry/management.

October 10, 2014  G.Cosmo                 geom-usolids-V10-00-19
- UMultiUnion: simplified and optimised use of transformations; removed
  no longer necessary vector of pointers.

September 24, 2014  T.Nikitina
- Fixed use of kInfinity in UGenericTrap implementation.

September 22, 2014  G.Cosmo               geom-usolids-V10-00-18
- Correction to UTessellatedSolid to define post-const attribute for